--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Google Cloud Platform Test Project",
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^6.0.0"
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5"
   },
   "devDependencies": {},
   "scripts": {
